Java 11 Compatibility (#406)
* refactored sources:
- finalized (class) variables where possible
- fixed types to remove compilation warnings
- fixed use of deprecated methods

other changes that might possibly break things:
- all declarations of Resource/Trackable interfaces are now package-private

* made RingoSecurityManager java 11 compliant by removing checkMemberAccess()

honestly i don't know if anyone uses ringo with security policies, so this
coud possibly be removed as well. for now it at least compiles with java 11

* switched default compilation target from 7 to 8